export interface DependencyUpdate {
  readonly packageName: string;
  readonly oldVersion: string;
  readonly newVersion: string;
}
